# ROS_xiongmao

./: README.md
catkin_test/: amcl_pose.sh  autor_gmapping.sh  autor_navigation.sh  killall.sh  map_save.sh  map_saver.sh  odom.sh  read  time.cpp
catkin_test/catkin_test1/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_test/catkin_test1/devel/include/turtlebot_actions/: FindFiducialAction.h  FindFiducialActionFeedback.h  FindFiducialActionGoal.h  FindFiducialActionResult.h  FindFiducialFeedback.h  FindFiducialGoal.h  FindFiducialResult.h  TurtlebotMoveAction.h  TurtlebotMoveActionFeedback.h  TurtlebotMoveActionGoal.h  TurtlebotMoveActionResult.h  TurtlebotMoveFeedback.h  (+2 more)
catkin_test/catkin_test1/src/: readMe.txt
catkin_test/catkin_test1/src/android_app/: CMakeLists.txt  CMakeLists.txt~  package.xml~
catkin_test/catkin_test1/src/get_angle/: CMakeLists.txt~
catkin_test/catkin_test1/src/go_forward/: CMakeLists.txt
catkin_test/catkin_test1/src/go_forward/src/: go_forward.cpp
catkin_test/catkin_test1/src/hokuyo_node-hydro-devel/: view_slam.launch  view_slam.launch~
catkin_test/catkin_test1/src/laser_data/: CMakeLists.txt  msg.txt
catkin_test/catkin_test1/src/omin_robot/: CMakeLists.txt  package.xml
catkin_test/catkin_test1/src/rdwr_serial/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_test/catkin_test1/src/rdwr_serial/src/: rdwr_serial.cpp
catkin_test/start_launch/: navigation_goal.cpp
catkin_test/start_launch/one/: navigation_red.cpp
catkin_test/start_launch/two/: navigation_blue.cpp  navigation_red.cpp
(+238 files in other folders)
